--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,26 +1,27 @@
 .footer {
   padding-top: 50px;
-
   color: #0f0e08;
-  &__nav {
-    display: flex;
-  }
-  &__social {
-    display: flex;
-  }
+
   &__icon {
     width: 24px;
     height: 24px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    transition: all 0.3s ease;
   }
+
   &__fb {
-    background-image: url(../images/Facebook.svg);
-    width: 12px;
+    transition: all 0.3s ease;
+    &:hover,
+    :focus > svg {
+      fill: #1a5a4c;
+    }
   }
+
   &__inst {
-    background-image: url(../images/inst.svg);
+    transition: all 0.3s ease;
+    &:hover,
+    :focus > svg {
+      fill: #1a5a4c;
+    }
   }
 
   &__time-day {
@@ -36,6 +37,11 @@
     @include menu-link;
     color: inherit;
     display: block;
+    transition: all 0.3s ease;
+    &:hover {
+      text-decoration: underline;
+      color: #1a5a4c;
+    }
   }
   &__arrow {
     display: flex;
@@ -64,9 +70,8 @@
       display: block;
     }
     @media (max-width: 767px) {
-      padding: 0 0 20px 0;
+      padding: 0 0 20px;
       border-bottom: 1px solid rgba(26, 90, 76, 0.5);
-
     }
   }
   &__nav {
@@ -74,11 +79,11 @@
     flex-direction: column;
     gap: 62px;
     align-items: center;
-    margin:0 136px 0 0;
+    margin: 0 136px 0 0;
     @media (max-width: 767px) {
       flex-direction: row;
       justify-content: space-between;
-      margin: 0 0 40px 0;
+      margin: 0 0 40px;
     }
   }
   &__navi {
@@ -114,14 +119,14 @@
       padding: 64px 0 0 210px;
     }
     @media (max-width: 767px) {
-      padding: 40px 0 0 0;
+      padding: 40px 0 0;
     }
   }
   &__info {
     padding: 0 65px 0 0;
     border-right: 1px solid rgba(26, 90, 76, 0.5);
     @media (max-width: 1279px) {
-      padding: 0 0 64px 0;
+      padding: 0 0 64px;
       border-right: transparent;
       border-bottom: 1px solid rgba(26, 90, 76, 0.5);
     }
@@ -142,16 +147,16 @@
   &__block-two {
     display: flex;
     justify-content: space-between;
-    padding: 87px 0 35px 0;
+    padding: 87px 0 35px;
     @media (max-width: 1279px) {
-      padding: 120px 0 36px 0;
+      padding: 120px 0 36px;
     }
     @media (max-width: 767px) {
       display: flex;
       flex-direction: column;
       gap: 10px;
       text-align: center;
-      padding: 80px 0 50px 0;
+      padding: 80px 0 50px;
     }
   }
   &__copy {
