--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -20,6 +20,14 @@
       margin-right: 0;
     }
   }
+  &__icon {
+    transition: all 0.3s ease;
+    &:hover,
+    :focus {
+      fill: #0f0e08;
+      transform: rotate(180deg);
+    }
+  }
   &__container {
     display: flex;
     padding: 25px 0 33px;
@@ -45,6 +53,10 @@
   }
   &__link {
     @include menu-link;
+    &:hover {
+      color: #0f0e08;
+      text-decoration: underline;
+    }
   }
   &__time-day {
     @include menu-hours;
@@ -68,9 +80,8 @@
     @include menu-hours;
     @media (max-width: 767px) {
       width: 100%;
-      margin-top:  16px;
+      margin-top: 16px;
     }
-
   }
   &__info {
     padding-left: 100px;
@@ -79,7 +90,7 @@
       padding-left: 40px;
     }
     @media (max-width: 767px) {
-      padding: 24px 0 0 0;
+      padding: 24px 0 0;
       border-left: 1px solid transparent;
 
       border-top: 1px solid #fff;
