--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -4,25 +4,37 @@
   align-items: center;
 
   @media (max-width: 1279px) {
-     gap: 52%;
+    gap: 52%;
+  }
+  @media (max-width: 767px) {
+    gap: 30%;
+  }
+  &__menu {
+    transition: all 0.3s ease;
+    &:hover,
+    :focus {
+      fill: #1a5a4c;
+      transform: rotate(180deg);
     }
+  }
+
+  &__logo {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 36px;
+    text-align: center;
+    text-decoration: none;
+    color: #0f0e08;
+    transition: all 0.3s ease;
+    &:hover,
+    :focus {
+      color: #1a5a4c;
+    }
+
     @media (max-width: 767px) {
-      gap: 30%;
-    }
-
-    &__logo{
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 36px;
       text-align: center;
-      text-decoration: none;
-      color: #0F0E08;
-
-      @media (max-width: 767px) {
-        text-align: center;
-        font-size: 30px;
-        line-height: 30px;
-      }
+      font-size: 30px;
+      line-height: 30px;
     }
+  }
 }
-
