--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -112,7 +112,7 @@
     width: 570px;
     height: 204px;
     background: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     @media (max-width: 1279px) {
       padding: 45px 80px;
       margin: -100px auto 0;
@@ -136,7 +136,7 @@
       padding: 200px 0 0;
     }
     @media (max-width: 767px) {
-      margin: 0px 0 40px;
+      margin: 0 0 40px;
       padding: 180px 0 0;
     }
   }
@@ -206,6 +206,7 @@
     }
   }
 }
+
 .section-four {
   padding: 0 20px;
   margin-top: 200px;
@@ -285,6 +286,10 @@
     height: 70px;
     width: 70px;
     border: none;
+    transition: all 0.3s ease;
+    &:hover {
+      background: url(../images/email1.svg);
+    }
     @media (max-width: 767px) {
       height: 50px;
       width: 50px;
