--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -9,6 +9,7 @@ h3,
 .nav__logo {
   font-family: "Montserrat", sans-serif;
 }
+
 h1 {
   text-transform: uppercase;
   font-weight: 700;
@@ -25,6 +26,7 @@ h1 {
     line-height: 45px;
   }
 }
+
 h2 {
   font-weight: 700;
   font-size: 48px;
@@ -37,16 +39,15 @@ h2 {
     line-height: 36px;
   }
 }
+
 h3 {
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  color: #0F0E08;
+  color: #0f0e08;
 
   @media (max-width: 767px) {
     font-size: 28px;
     line-height: 28px;
   }
 }
-
-
