--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -34,14 +34,12 @@
   font-size: 14px;
   line-height: 21px;
   color: #fff;
-
 }
 @mixin menu-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   color: #fff;
-
 }
 @mixin menu-link {
   text-decoration: none;
@@ -49,4 +47,6 @@
   font-size: 14px;
   line-height: 14px;
   color: #fff;
+  transition: all 0.3s ease;
+  
 }
