--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,17 +1,17 @@
 .header {
-
-  background: url(../images/photos/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png) no-repeat ;
+  background: url(../images/photos/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png)
+    no-repeat;
   background-position: right 0;
   background-size: 57%;
   // background-size: 725px;
   height: 655px;
   @media (max-width: 1279px) {
-  height: 384px;
-  background-size: 50%;
+    height: 384px;
+    background-size: 50%;
   }
   @media (max-width: 767px) {
-  height: 300px;
-  background-size: 100%;
+    height: 300px;
+    background-size: 100%;
   }
   &__title {
     margin-top: 119px;
@@ -23,28 +23,63 @@
       margin-top: 250px;
     }
   }
+
   &__tickets {
-
-  }
-  &__btn {
-    width: 270px;
-    height: 70px;
+    @include menu-link;
     margin-top: 89px;
-
-
-
+    text-transform: uppercase;
+    display: block;
+    font-size: 16px;
+    line-height: 16px;
+    color: #0f0e08;
+    padding: 26px 70px 26px 0;
+    border: 1px solid #1a5a4c;
+    text-align: center;
+    background-image: url(../images/email1.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+    transition: all 0.3s ease;
+    &:hover {
+      border: 1px solid #f14a27;
+      background-image: url(../images/email.svg);
+      text-decoration: underline;
+    }
     @media (max-width: 1279px) {
       margin-top: 38px;
       width: 100%;
-      height: 50px;
-
     }
     @media (max-width: 767px) {
+      padding: 17px 50px 17px 0;
       margin-top: 20px;
       width: 100%;
-      height: 50px;
-
+      background-size: 50px;
     }
+  }
+  &__event {
+    margin-top: 105px;
+    @include text-date;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    line-height: 14px;
+    text-decoration: none;
+    transform: rotate(-90deg);
+    transform-origin: left bottom;
+    gap: 20px;
+    transition: all 0.3s ease;
+    &::before {
+      display: block;
+      content: "";
 
+      width: 70px;
+      height: 1px;
+      background-color: #1a5a4c;
+    }
+    &:hover {
+      gap: 40px;
+    }
+    @media (max-width: 1279px) {
+      display: none;
+    }
   }
 }
