--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,9 +11,13 @@
 .body {
   background-color: #e5e5e5;
 }
+
+body::-webkit-scrollbar {
+  width: 0;
+}
+
 .body-menu {
   overflow: hidden;
-
 }
 
 .container {
