--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -286,6 +286,7 @@
     height: 70px;
     width: 70px;
     border: none;
+    cursor: pointer;
     transition: all 0.3s ease;
     &:hover {
       background: url(../images/email1.svg);
