add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -107,6 +107,11 @@
     justify-items: center;
     border: 1px solid #1a5a4c;
     height: 50px;
+    transition: all 0.3s;
+
+    &:hover {
+      box-shadow: 5px 5px 5px 0 rgba(26, 90, 76, 0.3);
+    }
 
     @include onTablet {
       --button-width: 70px;
@@ -124,6 +129,7 @@
   }
 
   &__tickets-text {
+    text-decoration: none;
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
