add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,12 +5,34 @@
     margin-right: 25px;
     text-decoration: none;
 
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
     @include onTablet {
       margin-right: 38px;
     }
 
     @include onDesktop {
       margin-right: 28px;
+    }
+  }
+
+  &__facebook-icon {
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  &__instagram-icon {
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
     }
   }
 
@@ -35,6 +57,12 @@
   }
 
   &__logo {
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
     @include onTablet {
       margin-bottom: 64px;
     }
