--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,6 +5,7 @@
   &__image {
     width: 55px;
     height: 61px;
+    transition: all 0.3s;
 
     @include onTablet {
       height: 72px;
@@ -14,9 +15,8 @@
       height: 72px;
     }
 
-    &--footer-style {
-      width: 63px;
-      height: 72px;
+    &:hover {
+      transform: scale(1.05);
     }
   }
 
