--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -100,6 +100,12 @@
       border: 0;
       cursor: pointer;
 
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+
       @include onTablet {
         width: 70px;
         height: 70px;
