--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,6 +1,6 @@
 .logo {
   display: block;
-  margin: 0 auto;
+  margin: 0 60px;
   width: max-content;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
