--- a/src/styles/blocks/section-podiji.scss
+++ b/src/styles/blocks/section-podiji.scss
@@ -14,6 +14,7 @@
   &__block-text {
     @include onDesktop {
       width: 370px;
+      padding-left: 1rem;
     }
   }
 
@@ -71,7 +72,7 @@
     &-mar {
       display: inline-block;
       margin-left: 10px;
-      margin-top: 10px;
+      margin-top: 5px;
     }
   }
 
@@ -82,20 +83,25 @@
     font-size: 28px;
     line-height: 100%;
     color: #0f0e08;
-    text-align: center;
+    text-align: initial;
+    width: fit-content;
+
+    @include onTabletMore {
+      font-size: 36px;
+    }
   }
 
   &__block {
     display: flex;
     align-items: baseline;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   &__rectangle {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     background-color: #f14a27;
-    margin-left: 10px;
+    margin-left: 12px;
     transform: translateY(-25%);
   }
 
@@ -124,9 +130,14 @@
       margin: -3rem auto 100px;
       border-bottom: 2px solid rgba(26, 90, 76, 0.25);
       width: 90%;
+      padding: 2rem 9%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
 
       @include onDesktop {
         width: 50%;
+        padding: 2rem 10%;
       }
     }
   }
