--- a/src/styles/blocks/arrow-block.scss
+++ b/src/styles/blocks/arrow-block.scss
@@ -8,6 +8,10 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  &:hover {
+    background-color: #2eae5b;
+  }
+
   @media (min-width: 767px) {
     width: 70px;
     height: 70px;
@@ -15,11 +19,16 @@
 
   &--red {
     background-color: #f14a27;
+    background-image: url(../images/arrow-subscription.svg);
     width: 50px;
     height: 50px;
     margin: 0 auto;
     cursor: pointer;
 
+    &:hover {
+      background-color: #cc2403;
+
+    }
     @include onTabletMore {
       width: 70px;
       height: 70px;
