add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -108,6 +108,7 @@
     border: 1px solid #1a5a4c;
     height: 50px;
     transition: all 0.3s;
+    cursor: pointer;
 
     &:hover {
       box-shadow: 5px 5px 5px 0 rgba(26, 90, 76, 0.3);
