--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,101 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
+.page {
+  font-family: $fontIBM;
+}
+
+.header {
+  height: 482px;
+  padding: 10px 20px 0;
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    background-image: url(../images/header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    width: 100%;
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 250px;
+  }
+
+  &__menu-opener {
+    height: 24px;
+    width: 24px;
+    display: block;
+
+    background-image: url(../images/icons/menu.svg);
+  }
+
+  &__logo {
+    margin-left: 88px;
+    width: 55px;
+    height: 61px;
+  }
+
+  &__title {
+    font-family: $fontMontserrat;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 100%;
+
+    text-align: center;
+
+    color: #000;
+
+    margin-bottom: 20px;
+  }
+
+  &__events {
+    display: none;
+  }
+
+  &__button {
+    display: flex;
+    cursor: pointer;
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0f0e08;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    text-transform: uppercase;
+    height: 50px;
+    width: 230px;
+
+    padding: 18px 80px;
+
+    border: 1px solid $colorGreen;
+  }
+}
+
+.btn {
+  height: 50px;
+  width: 50px;
+  background-color: $colorGreen;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background-image: url(../images/icons/arrow-white.svg);
+    width: 24px;
+    height: 24px;
+  }
 }
