add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -57,6 +57,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    transition: all 0.3s;
 
     &:hover {
       background-image: url(../images/menu-hover.svg);
