add task solution

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,12 +3,12 @@
   background-color: #fff;
   scroll-behavior: smooth;
 
-  &__content--with-menu {
-    overflow: hidden;
-  }
-
   &__content {
     margin: 0;
+  }
+
+  &__content--with-menu {
+    overflow: hidden;
   }
 
   &__header {
@@ -34,6 +34,15 @@
 
     &:target {
       transform: translateY(0);
+
+      &::after {
+        content: "";
+        left: 0;
+        right: 0;
+        position: absolute;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     }
   }
 
