--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -26,6 +26,10 @@
   &--contacts {
     margin: 0;
 
+    &:hover {
+      transform: translateZ(+10px);
+    }
+
     @include onTabletMore {
       grid-column: 1 / span 2;
     }
