--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -91,6 +91,10 @@
       line-height: 100%;
       color: #0f0e08;
 
+      &:hover {
+        color: #f14a27;
+      }
+
       &--pad {
         @include onTablet {
           padding-left: 1rem;
