--- a/src/styles/blocks/section-podiji.scss
+++ b/src/styles/blocks/section-podiji.scss
@@ -3,6 +3,7 @@
   &__container {
 
     margin-bottom: 100px;
+    perspective: 400px;
 
     @include onDesktop {
       display: flex;
@@ -37,6 +38,11 @@
     width: 100%;
     margin: 0 auto;
     display: block;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: translateZ(25px);
+    }
 
     @include onDesktop {
       width: 60%;
