--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -58,6 +58,11 @@
     margin: 0 auto;
     text-align: start;
     padding-left: 32px;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
 
     @include onTablet {
       width: 374px;
