--- a/src/styles/blocks/arrow-block.scss
+++ b/src/styles/blocks/arrow-block.scss
@@ -7,6 +7,7 @@
   background-image: url(../images/arrow.svg);
   background-repeat: no-repeat;
   background-position: center;
+  border-style: none;
 
   &:hover {
     background-color: #2eae5b;
@@ -24,6 +25,7 @@
     height: 50px;
     margin: 0 auto;
     cursor: pointer;
+    border-style: none;
 
     &:hover {
       background-color: #cc2403;
