--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,8 +5,20 @@
   }
 }
 
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
 @mixin onDesktop {
-  @media (min-width: 1024px) {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin largeDesktop {
+  @media (min-width: 1440px) {
     @content;
   }
 }
