--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -5,10 +5,17 @@
 
 h1,
 h2,
-p {
+h3,
+p,
+ul {
+  margin: 0;
   padding: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
