--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,192 +1,14 @@
-@import "utils";
+@import "utils/variables";
+@import "utils/mixins";
+@import "utils/reset.scss";
 
-.page {
-  font-family: $fontIBM;
-}
-
-.container {
-  box-sizing: content-box;
-  max-width: 1170px;
-  padding: 0 20px;
-  margin: 0 auto;
-}
-
-.header {
-  height: 482px;
-  padding: 10px 0 0;
-
-  @include onDesktop {
-    height: 100vh;
-  }
-
-  &__bg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -1;
-    background-image: url(../images/header.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-    width: 100%;
-
-    @include onDesktop {
-      height: 655px;
-      width: 55%;
-    }
-  }
-
-  &__top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 250px;
-    width: 60%;
-
-    @include onDesktop {
-      margin-bottom: 119px;
-      width: 60%;
-    }
-  }
-
-  &__menu-opener {
-    height: 24px;
-    width: 24px;
-    display: block;
-
-    background-image: url(../images/icons/menu.svg);
-  }
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    @include onDesktop {
-      max-width: 470px;
-    }
-  }
-
-  &__title {
-    font-family: $fontMontserrat;
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 100%;
-
-    text-align: center;
-
-    color: #000;
-
-    margin-bottom: 20px;
-
-    @include onDesktop {
-      font-size: 72px;
-      line-height: 120%;
-      text-align: left;
-      margin-bottom: 89px;
-    }
-  }
-
-  &__events {
-    display: none;
-    align-self: flex-start;
-    position: relative;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 100%;
-    text-transform: uppercase;
-    padding-left: 20px;
-    color: #687480;
-
-    transform: rotate(-90deg);
-
-    &::after {
-      display: block;
-      content: "";
-      height: 1px;
-      width: 70px;
-      background-color: $colorGreen;
-      position: absolute;
-      right: 100%;
-      top: 50%;
-    }
-
-    @include onDesktop {
-      display: flex;
-    }
-  }
-
-  &__button {
-    display: flex;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-
-    @include onDesktop {
-      align-self: flex-end;
-      width: 270px;
-    }
-  }
-
-  &__btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #0f0e08;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    text-transform: uppercase;
-    height: 50px;
-
-    padding: 18px 80px;
-
-    border: 1px solid $colorGreen;
-
-    @include onDesktop {
-      min-height: 70px;
-      padding: 27px 68px;
-    }
-  }
-}
-
-.btn {
-  display: flex;
-  min-height: 50px;
-  min-width: 50px;
-  background-color: $colorGreen;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-
-  &::before {
-    position: absolute;
-    content: "";
-    background-image: url(../images/icons/arrow-white.svg);
-    width: 24px;
-    height: 24px;
-  }
-
-  @include onDesktop {
-    min-height: 70px;
-    min-width: 70px;
-  }
-}
-
-.logo {
-  &__image {
-    width: 55px;
-    height: 61px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    @include onDesktop {
-      height: 72px;
-      width: 170px;
-    }
-  }
-}
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/navigation.scss";
+@import "blocks/menu.scss";
+@import "blocks/schedule.scss";
+@import "blocks/grid.scss";
+@import "blocks/icon.scss";
+@import "blocks/logo.scss";
+@import "blocks/btn.scss";
