add task solution

--- a/src/styles/blocks/exhibit.scss
+++ b/src/styles/blocks/exhibit.scss
@@ -12,11 +12,21 @@
   &__image-1 {
     @include image;
     background-image: url(../images/image-1.jpg);
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.02)
+    }
   }
 
   &__image-2 {
     @include image;
     background-image: url(../images/image-2.jpg);
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.02)
+    }
   }
 
   &__event-and-date-box {
