--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -95,7 +95,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     object-fit: cover;
-    transition: transform 0.3s;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.02)
+    }
 
     &-container {
       width: 280px;
