changed to grid

--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -1,12 +1,14 @@
 .btn {
+  box-sizing: border-box;
   display: flex;
-  min-height: 50px;
-  min-width: 50px;
-  background-color: $colorGreen;
-  position: relative;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  position: relative;
   cursor: pointer;
+
+  background-color: $colorGreen;
 
   &::before {
     position: absolute;
@@ -16,8 +18,8 @@
     height: 24px;
   }
 
-  @include onDesktop {
-    min-height: 70px;
-    min-width: 70px;
+  @include onTablet {
+    height: 70px;
+    width: 70px;
   }
 }
