--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,4 @@
 .menu {
-  color: #fff;
   background-color: $colorGreen;
 
   &__content {
@@ -9,7 +8,33 @@
       display: grid;
       grid-template-areas: "menu__nav nav menu__line schedule";
       gap: 38px;
+
       padding: 40px 0;
+    }
+  }
+
+  &__close {
+    width: min-content;
+
+    @include onTablet {
+      margin-right: 18px;
+    }
+
+    @include onDesktop {
+      margin-right: 72px;
+    }
+
+    &-icon {
+      display: block;
+      height: 24px;
+      width: 24px;
+
+      background-image: url(../images/icons/menu-close.svg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+
+      @include hover(transform, scale(1.2));
     }
   }
 
@@ -17,6 +42,7 @@
     margin: 24px 0;
     height: 1px;
     width: 100%;
+
     background-color: rgba(255, 255, 255, 0.5);
 
     @include onTablet {
