--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -17,11 +17,8 @@
   &__list {
     margin-bottom: 24px;
     list-style: none;
-    transition: transform 0.3s;
 
-    &:hover {
-      transform: scale(1.1);
-    }
+    @include hover(transform, scale(1.2));
 
     &:last-child {
       margin: 0;
@@ -31,7 +28,6 @@
   &__link {
     font-weight: 500;
     color: #fff;
-    text-decoration: none;
 
     @include onDesktop {
       font-size: 22px;
