--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,13 +2,12 @@
 @import "utils/mixins";
 @import "utils/reset.scss";
 
+@import "blocks/btn.scss";
 @import "blocks/page.scss";
 @import "blocks/container.scss";
+@import "blocks/header-top.scss";
 @import "blocks/header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/menu.scss";
 @import "blocks/schedule.scss";
 @import "blocks/grid.scss";
-@import "blocks/icon.scss";
-@import "blocks/logo.scss";
-@import "blocks/btn.scss";
