--- a/src/styles/utils/_subscription.scss
+++ b/src/styles/utils/_subscription.scss
@@ -87,6 +87,7 @@
       padding: 18px 24px;
       border: 1px solid transparent;
       background-color: #fff;
+      cursor: pointer;
 
       @include onTablet {
         margin-right: 20px;
@@ -131,6 +132,7 @@
     width: 50px;
     border: 0;
     z-index: 1;
+    cursor: pointer;
 
     @include onTablet {
       height: 70px;
