added events and lecture sections for mobile

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,8 @@
   box-sizing: border-box;
   height: min-content;
 
+  margin-bottom: 70px;
+
   &::after {
     content: "";
     position: absolute;
