--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "utils/variables";
-@import "utils/mixins";
-@import "utils/reset.scss";
+@import "utils/_variables";
+@import "utils/_mixins";
+@import "utils/_reset";
 
 @import "blocks/btn.scss";
 @import "blocks/page.scss";
@@ -11,3 +11,5 @@
 @import "blocks/menu.scss";
 @import "blocks/schedule.scss";
 @import "blocks/grid.scss";
+@import "blocks/events.scss";
+@import "blocks/lecture.scss";
