--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,6 +4,10 @@
   padding: 0 20px;
   margin: 0 auto;
 
+  @include onTablet {
+    padding: 0 34px;
+  }
+
   @include onDesktop {
     padding: 0 55px;
   }
