--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,5 @@
 @import "blocks/grid.scss";
 @import "blocks/events.scss";
 @import "blocks/lecture.scss";
+@import "blocks/slider.scss";
+@import "blocks/gallery.scss";
