--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/reset";
+@import "utils/variables";
+@import "utils/mixins";
+@import "utils/extends";
+@import "utils/web-slider";
+@import "utils/grid";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/section.scss";
+@import "blocks/container.scss";
+@import "blocks/sсhedule-and-contacts.scss";
+@import "blocks/header.scss";
+@import "blocks/menu-navigation.scss";
+@import "blocks/events.scss";
+@import "blocks/galery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss"
