--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,7 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body {
     &--with-menu {
