--- a/src/styles/blocks/menu-navigation.scss
+++ b/src/styles/blocks/menu-navigation.scss
@@ -21,11 +21,7 @@
     position: absolute;
     left: 20px;
     top: 27px;
-    transition: transform, 0.3s;
-
-    &:hover {
-      transform: scale(1.1);
-    }
+    @include hoverTransform;
 
     &--image {
       width: 24px;
