--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -33,6 +33,7 @@
     }
 
     &__double {
+      display: flex;
       @include onTablet {
         display: flex;
         flex-direction: row;
@@ -40,10 +41,35 @@
     }
 
     &__facebook {
-      margin-right: 26px;
+      margin-right: 20px;
+      background-image: url(../images/signs/Facebook.svg);
+      background-repeat: no-repeat;
+      width: 25px;
+      height: 25px;
+
+      &:hover {
+        background-image: url(../images/signs/fb_hover.png);
+        background-repeat: no-repeat;
+        width: 25px;
+        height: 25px;
+      }
 
       @include onTablet {
         margin-right: 38px;
+      }
+    }
+
+    &__instagram {
+      background-image: url(../images/signs/Instagram.svg);
+      background-repeat: no-repeat;
+      width: 25px;
+      height: 25px;
+
+      &:hover {
+        background-image: url(../images/signs/insta_hover.png);
+        background-repeat: no-repeat;
+        width: 25px;
+        height: 25px;
       }
     }
   }
