--- a/src/styles/utils/_subscription.scss
+++ b/src/styles/utils/_subscription.scss
@@ -106,12 +106,12 @@
       }
 
       &:hover {
-        border-color: $colorOrange;
+        border-color: $colorGreen;
         color: black;
       }
 
       &:focus {
-        border-color: $colorGreen;
+        border-color: $colorOrange;
         outline: none;
       }
     }
@@ -133,6 +133,10 @@
     border: 0;
     z-index: 1;
     cursor: pointer;
+
+    &:hover {
+      background-color: $colorGreen;
+    }
 
     @include onTablet {
       height: 70px;
