added tablet responsive for events and lecture

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,6 +3,10 @@
 
   &__item {
     margin-bottom: 60px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
   }
 
   &__title {
@@ -15,12 +19,23 @@
     color: #0f0e08;
 
     margin-bottom: 40px;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+      text-align: start;
+    }
   }
 
   &__image {
     height: 210px;
     width: 100%;
     margin-bottom: 16px;
+
+    @include onTablet {
+      height: 520px;
+      margin-bottom: 40px;
+    }
   }
 
   &__info {
@@ -29,6 +44,12 @@
     justify-content: space-between;
 
     margin-bottom: 10px;
+
+    @include onTablet {
+      margin-bottom: 30px;
+      justify-content: start;
+      gap: 50px;
+    }
   }
 
   &__type {
@@ -55,6 +76,13 @@
     line-height: 28px;
 
     margin-bottom: 10px;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 36px;
+      gap: 20px;
+      margin-bottom: 15px;
+    }
   }
 
   &__name {
@@ -69,6 +97,11 @@
     height: 10px;
     margin-top: 5px;
     background-color: #f14a27;
+
+    @include onTablet {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   &__description {
@@ -77,5 +110,9 @@
     line-height: 24px;
 
     color: #4e4e4e;
+
+    @include onTablet {
+      width: 460px;
+    }
   }
 }
