--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -8,6 +8,13 @@
     margin-bottom: 40px;
 
     color: #0f0e08;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+      text-align: start;
+      margin-bottom: 48px;
+    }
   }
 
   &__content {
