--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -7,9 +7,14 @@
     width: 100%;
 
     object-fit: cover;
+
+    @include onTablet {
+      height: 390px;
+    }
   }
 
   &__content {
+    font-family: $fontMontserrat;
     position: absolute;
     min-width: 280px;
 
@@ -21,6 +26,13 @@
 
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @include onTablet {
+      width: 570px;
+      height: 204px;
+      top: 280px;
+      padding: 45px 55px 50px;
+    }
   }
 
   &__info {
@@ -29,6 +41,13 @@
     display: flex;
     justify-content: space-around;
     line-height: 24px;
+
+    @include onTablet {
+      justify-content: start;
+      padding: 0;
+      margin-bottom: 16px;
+      gap: 180px;
+    }
   }
 
   &__type {
@@ -36,6 +55,11 @@
     font-size: 16px;
 
     color: #687480;
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
 
   &__date {
@@ -43,7 +67,12 @@
     font-weight: 700;
     font-size: 16px;
 
-    color: #1a5a4c;
+    color: $colorGreen;
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
 
   &__title {
@@ -55,5 +84,11 @@
     text-align: center;
 
     color: #0f0e08;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 36px;
+      text-align: start;
+    }
   }
 }
