added desktop responsive for events and lecture sections

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,6 +5,14 @@
 
   margin-bottom: 70px;
 
+  @include onTablet {
+    margin-bottom: 88px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
   &::after {
     content: "";
     position: absolute;
