--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -11,6 +11,10 @@
     @include onTablet {
       height: 390px;
     }
+
+    @include onDesktop {
+      height: 550px;
+    }
   }
 
   &__content {
@@ -32,6 +36,10 @@
       height: 204px;
       top: 280px;
       padding: 45px 55px 50px;
+    }
+
+    @include onDesktop {
+      top: 452px;
     }
   }
 
