--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -52,5 +52,9 @@
     @include onTablet {
       margin-bottom: 215px;
     }
+
+    @include onDesktop {
+      margin-bottom: 302px;
+    }
   }
 }
