--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -7,6 +7,15 @@
     @include onTablet {
       margin-bottom: 64px;
     }
+
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: auto auto;
+      align-items: center;
+      column-gap: 130px;
+
+      margin-bottom: 104px;
+    }
   }
 
   &__title {
@@ -25,6 +34,10 @@
       line-height: 48px;
       text-align: start;
     }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+    }
   }
 
   &__image {
@@ -36,9 +49,15 @@
       height: 520px;
       margin-bottom: 40px;
     }
+
+    @include onDesktop {
+      width: 670px;
+      height: 520px;
+      margin-bottom: 0;
+    }
   }
 
-  &__info {
+  &__exhibition {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -113,6 +132,10 @@
 
     @include onTablet {
       width: 460px;
+    }
+
+    @include onDesktop {
+      width: 370px;
     }
   }
 }
