added subscription section

--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -22,4 +22,12 @@
     height: 70px;
     width: 70px;
   }
+
+  &--orange {
+    background-color: #f14a27;
+
+    &::before {
+      background-image: url(../images/icons/arrow-black.svg);
+    }
+  }
 }
