--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,14 @@
 .gallery {
+  margin-bottom: 130px;
+
+  @include onTablet {
+    margin-bottom: 133px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
   &__title {
     font-family: $fontMontserrat;
     font-weight: 700;
