--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,4 @@
 @import "blocks/lecture.scss";
 @import "blocks/slider.scss";
 @import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
