--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -45,6 +45,8 @@
     width: 100%;
     margin-bottom: 16px;
 
+    @include hover(transform, scale(1.1));
+
     @include onTablet {
       height: 520px;
       margin-bottom: 40px;
