--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -127,6 +127,9 @@
       transform: rotate(-90deg);
       text-transform: uppercase;
 
+      @include hover(color, $colorGreen);
+      @include hover(font-size, 16px);
+
       &::before {
         display: block;
         content: "";
