--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -12,6 +12,10 @@
     @include onDesktop {
       width: 170px;
     }
+
+    &--footer {
+      width: 130px;
+    }
   }
 
   &__list {
@@ -23,6 +27,10 @@
     &:last-child {
       margin: 0;
     }
+
+    &--footer {
+      margin-bottom: 20px;
+    }
   }
 
   &__link {
@@ -32,6 +40,12 @@
     @include onDesktop {
       font-size: 22px;
       line-height: 22px;
+    }
+
+    &--footer {
+      color: #0f0e08;
+      font-size: 14px;
+      line-height: 14px;
     }
   }
 }
