--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -10,6 +10,10 @@
     gap: 30px;
   }
 
+  &--footer {
+    flex-direction: column;
+  }
+
   &__title {
     font-weight: 400;
     font-size: 14px;
@@ -39,6 +43,12 @@
     @include onTablet {
       align-self: flex-end;
       max-width: 170px;
+    }
+
+    &--footer {
+      @include onTablet {
+        align-self: start;
+      }
     }
   }
 }
