--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -41,20 +41,18 @@
   }
 
   &__image {
-    height: 210px;
+    height: 100%;
     width: 100%;
     margin-bottom: 16px;
 
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.05));
 
     @include onTablet {
-      height: 520px;
       margin-bottom: 40px;
     }
 
     @include onDesktop {
       width: 670px;
-      height: 520px;
       margin-bottom: 0;
     }
   }
