--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -29,7 +29,7 @@
 
 .carousel-cell img {
   display: block;
-  height: 410px;
+  height: 100%;
   width: 100%;
   /* dim unselected */
   opacity: 0.7;
